# Telecraft

./: CMakeLists.txt  LICENSE  README.md  shell.nix
include/: telecraft.hpp
include/telecraft/: BoostAsio.hpp  MethodBuilders.hpp  RequestManager.hpp  core.hpp  types.hpp  types_core.hpp
include/telecraft/api/: methods.hpp  params.hpp
include/telecraft/api/methods/: sendMessage.hpp
include/telecraft/core/: ClientInterface.hpp  HttpManagement.hpp  MethodBuilders.hpp  ParamsManagement.hpp  RequestManager.hpp  http_mgmt.hpp  params_mgmt.hpp
include/telecraft/utils/: TgTypes.hpp  fix_string.hpp  json.hpp
test/: CMakeLists.txt  main.cpp  utils.h
test/net/: posix_ssl.cpp  posix_ssl.h
tests/: CMakeLists.txt  MethodBuilders.cpp  ParamsManagement.cpp  main.cpp  utils.cpp
tests/net/: client.h
